--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-    <div id="LeftColumn"></div>
-    <div id="RightColumn"></div>
-    <div id="TopColumn"></div>
-    <div id="BottomColumn"></div>
+    <div id="container">
+        <div class="left-column">ESQUERDA</div>
+        <div class="right-column">DIREITA</div>
+        <div class="top-column">TOPO</div>
+        <div class="bottom-column">BAIXO</div>
+    </div>
 </body>
 
 </html>
